# game-institute-directx

./: CMakeLists.txt  LICENSE  README.md
Includes/: CGameApp.h  CObject.h  CTimer.h  Main.h
Res/: Software_Render.rc  resource.h
Source/: CGameApp.cpp  CObject.cpp  CTimer.cpp  Main.cpp
cmake/: FindDirectX.cmake  FindPkgMacros.cmake
